--- a/css/main.css
+++ b/css/main.css
@@ -180,9 +180,10 @@ textarea {
   flex-direction: column;
 }
 
-#import, #compare, #validate{
+#import, #compare, #validate, #reset{
   margin: 20px;
-  max-width: 100px;
+  width: 120px;
+
 }
 
 #valid {
