--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
 }
 
 /*
@@ -180,10 +181,48 @@ textarea {
   flex-direction: column;
 }
 
-#import, #compare, #validate, #reset{
-  margin: 20px;
-  width: 120px;
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  resize: none;
+}
 
+.button-container {
+  display: flex;
+}
+
+.button-10 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 6px 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
+  border-radius: 6px;
+  border: none;
+
+  color: #fff;
+  background: linear-gradient(180deg, #4B91F7 0%, #367AF6 100%);
+  background-origin: border-box;
+  box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-10:focus {
+  box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+  outline: 0;
+}
+
+#import, #compare, #validate, #reset, #download {
+  margin: 20px;
+  min-width: 200px;
 }
 
 #valid {
@@ -194,6 +233,10 @@ textarea {
   margin: 0;
   padding: 0;
   color: red;
+}
+
+label {
+  padding: 20px ;
 }
 
 textarea {
