--- a/css/main.css
+++ b/css/main.css
@@ -221,8 +221,8 @@ textarea {
 }
 
 .button-15 {
-  background-image: linear-gradient(#42A1EC, #0070C9);
-  border: 1px solid #0077CC;
+  background-image: linear-gradient(#10A58C, #09D8B6);
+  border: 1px solid #27F0CE;
   border-radius: 4px;
   box-sizing: border-box;
   color: #FFFFFF;
@@ -251,14 +251,14 @@ textarea {
 }
 
 .button-15:hover {
-  background-image: linear-gradient(#51A9EE, #147BCD);
-  border-color: #1482D0;
+  background-image: linear-gradient(#0A7563, #0E957F);
+  border-color: #27F0CE;
   text-decoration: none;
 }
 
 .button-15:active {
-  background-image: linear-gradient(#3D94D9, #0067B9);
-  border-color: #006DBC;
+  background-image: linear-gradient(#0A7563, #0E957F);
+  border-color: #27F0CE;
   outline: none;
 }
 
@@ -287,8 +287,8 @@ label {
 }
 
 textarea {
-  width: 1200px;
-  height: 150px;
+  width: 800px;
+  height: 200px;
 }
 
 /* ==========================================================================
